# mahjong-rs

./: Cargo.toml
docs/: 20221214-architecture.md  20221214-goals.md  unicode_mj.txt
src/: lib.rs  main.rs
