[package]
name = "mj"
description = "An open source riichi mahjong program including libraries and utilities for reuse"
version = "0.0.1"
edition = "2021"
authors = ["Nori Li"]
license = "MIT"
keywords = ["mahjong", "game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
# num-traits = "0.2"
# num-derive = "0.2"
